# src/api/internal/models/requests/add_review.go
@@ -2,6 +2,6 @@ package request_model
 
 type AddReview struct {
 	UserId  string  `json:"user_id"` //TODO: Need to get from the logged in user
-	Rating  float64 `json:"rating"`
+	Score   float64 `json:"score"`
 	Comment string  `json:"comment"`
 }
