# src/api/internal/repositories/review_repository.go
@@ -34,7 +34,7 @@ func NewReviewRepository(client *dynamodb.Client, tableName string) ReviewReposi
 }
 
 func (r *reviewRepository) Add(movieId string, userName string, review request_model.AddReview) error {
-	dbRviewModel, err := db_model.NewAddReview(movieId, review.UserId, userName, review.Rating, review.Comment)
+	dbRviewModel, err := db_model.NewAddReview(movieId, review.UserId, userName, review.Score, review.Comment)
 	if err != nil {
 		return err
 	}
